# warden-desktop

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  TODO.md  biome.json  go.mod  go.sum  index.html  justfile  package.json  pnpm-lock.yaml  todo.md  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
agent/: confirm.go  llm_client.go  prompt.go  registry_test.go  runner.go  session.go
agent/memory/: aggregator.go  extractor.go  store.go
agent/safety/: filesystem.go  policy.go  powershell.go
agent/skills/: skills.go
agent/tools/: archive.go  browser.go  data.go  fileops.go  files.go  http.go  input.go  memory.go  misc.go  move.go  netdiag.go  patch.go  process.go  screen.go  search.go  shell.go  system.go  tool.go  window.go  winsys.go
backend/: LICENSE  pyproject.toml  pytest.ini  requirements.txt  run_backend.py  warden-backend.spec
backend/agent/: app_state.py  chat.py  chat_store.py  confirmations.py  conftest.py  llm_client.py  logger.py  paths.py  prompt.py  server.py  skills.py  test_chat_session.py  test_chat_store.py  test_chat_tool_execution.py  test_confirmations.py  test_llm_client.py  test_logger.py  test_safety.py  test_server.py  test_skills.py  test_tool_runner.py  test_tools.py  test_tools_archive.py  test_tools_browser.py  test_tools_core.py  test_tools_files.py  test_tools_http.py  test_tools_lsp.py  test_tools_new.py  test_tools_patch.py  test_tools_screen.py  test_tools_search.py  test_tools_window.py  tool_runner.py
backend/agent/memory/: __init__.py  aggregator.py  extractor.py  store.py  test_aggregator.py  test_context.py  test_extractor.py  test_store.py
backend/agent/routes/: chat.py  chats.py  memory.py  models.py  skills.py  system.py
backend/agent/safety/: __init__.py  _filesystem.py  _policy.py  _powershell.py
backend/agent/tools/: __init__.py  archive.py  base.py  browser.py  files.py  http.py  input.py  lsp.py  memory.py  misc.py  move.py  patch.py  process.py  screen.py  search.py  shell.py  system.py  test_memory.py  window.py
backend/kot-lang/: example.kot  kot.py
cmd/warden-backend/: main.go  main_test.go
docs/: README.md  architecture.md  project.md  setup.md
internal/client/: dto.go  stream.go
internal/security/: encrypt.go  encrypt_unix.go  encrypt_windows.go
internal/tui/: backend.go  blocks.go  blocks_test.go  chain.go  chain_test.go  client_adapter.go  commands.go  diff.go  diff_test.go  input.go  input_test.go  keys.go  keys_action.go  keys_action_test.go  keys_nav.go  keys_nav_test.go  keys_test.go  main.go  markdown.go  messages.go  messages_test.go  mock_backend_test.go  model.go  render.go  render_test.go  slash.go  slash_test.go  status.go  styles.go  styles_test.go  tools.go  tools_test.go  update.go  update_modal.go  update_modal_test.go  update_stream.go  update_stream_test.go  update_system.go  update_system_test.go  view.go  (+2 more)
scripts/: build-backend.ps1  dev-backend.mjs
src/: App.tsx  index.css  main.tsx  motion.ts  types.ts
src-tauri/: Cargo.toml  tauri.bundle.conf.json  tauri.conf.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/api/: client.ts  schemas.ts  session.ts  stream.ts  types.ts
src/components/: AnimatedArrowLeft.tsx  AnimatedBlocks.tsx  AnimatedBot.tsx  AnimatedBrain.tsx  AnimatedInfo.tsx  AnimatedPencil.tsx  AnimatedSettings.tsx  AnimatedSliders.tsx  AnimatedSquarePen.tsx  AnimatedTrash.tsx  AnimatedWifi.tsx  BackButton.tsx  ConfirmModal.tsx  ConnectModal.tsx  DropdownButton.tsx  InputBar.tsx  MessageList.tsx  ModeToggle.tsx  ModelSelector.tsx  QuestionModal.tsx  ResizeHandle.tsx  SettingsView.tsx  Sidebar.tsx  SkillsView.tsx  StarfieldBackdrop.tsx  StatusBar.tsx  Timeline.tsx  TitleBar.tsx  Toaster.tsx  Tooltip.tsx  markdown.tsx
src/components/animated-icon/: AnimatedIcon.tsx  BotIcon.tsx  MessageCircleIcon.tsx
src/data/: mock.ts
src/hooks/: useAppInit.ts  useBlocks.ts  useEscape.ts  useStreamSession.ts  useThrottledValue.ts  useUpdater.ts  useWindowSpansFull.ts
src/lib/: icon.tsx  toolDescription.ts
src/test/: ConnectModal.test.tsx  ModeToggle.test.tsx
src/test/msw/: handlers.ts
