[project]
name = "warden-backend"
version = "0.1.0"
description = "Warden agent runtime: HTTP+NDJSON server, LLM client, tools, memory, skills, safety"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9,<4.0",
    "openai>=1.0,<3.0",
    "duckduckgo-search>=6.0,<8.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
# Optional runtime tools (imported lazily). Install with: uv sync --extra tools
tools = [
    "pyautogui>=0.9",
    "playwright>=1.40",
    "html2text>=2024.2.26",
]
# PyInstaller and helpers for `pnpm build:backend`. Install with: uv sync --extra build
build = [
    "pyinstaller>=6.0",
]

[dependency-groups]
# Test/lint tooling. Installed by default with `uv sync`.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pytest-aiohttp>=1.0",
    "ruff>=0.7",
]

[tool.uv]
# Backend is an application, not a distributable library.
package = false

# ─── ruff ────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".tmp", ".warden", "htmlcov", "dist", "build"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # function calls in argument defaults (common in fastapi-style)
    # ─── Tech debt: вернуть к проверке после рефактора на этапе 5 ───
    "RUF012", # mutable-class-default — нужно ClassVar в tools/*.py
    "RUF059", # unused-unpacked-variable
    "F401",   # unused-import — нужна чистка
    "F841",   # unused-variable
    "E741",   # ambiguous variable name (l, I, O)
    "SIM105", # suppressible-exception — заменить на contextlib.suppress
    "SIM117", # multiple-with-statements
    "SIM108", # if-else вместо тернарного
    "RUF001", # ambiguous unicode character (— vs - и т.п.)
    "RUF005", # collection-literal-concat
    "RUF006", # asyncio-dangling-task — потенциальный баг, проверить
    "B007",   # unused loop control variable
    "B905",   # zip без strict=
    "E402",   # import не в начале файла
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["B011"]      # assert False is fine in tests
"conftest.py" = ["F401"]    # fixtures may look unused

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── pytest ──────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["agent"]
tmp_path_retention_count = 1
addopts = "--cov=agent --cov-fail-under=80 --cov-report=term-missing --cov-report=html:htmlcov --cov-report=json:coverage.json"

# ─── coverage ────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["agent"]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 1
