[package]
name = "warden-desktop"
version = "1.0.2"
description = "Warden Desktop — AI agent desktop shell"
authors = ["elev1e1nSure"]
edition = "2021"

[lib]
name = "warden_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[profile.release]
lto = "thin"
codegen-units = 256
strip = "symbols"

